--- a/src/app/shared/component/common-confirm-dialog/common-confirm-dialog.component.scss
+++ b/src/app/shared/component/common-confirm-dialog/common-confirm-dialog.component.scss
@@ -390,3 +390,37 @@
 .m-t-55 {
   margin-top: 55px;
 }
+
+.custom- {
+  &mat-dialog-container {
+    padding: 0 !important;
+  }
+}
+
+// .mat-dialog-container {
+//   padding: 0 !important;
+// }
+
+@media (max-width: 724px) {
+  .dialog-card {
+    &-sm {
+      margin: -24px !important;
+      width: 70vw !important;
+      max-height: 65vh !important;
+      & > .mat-card {
+        padding: 0 !important;
+      }
+    }
+  }
+}
+
+@media (min-width: 725px) {
+  .dialog-card {
+    margin: -24px !important;
+    width: 35vw !important;
+    max-height: 65vh !important;
+    & > .mat-card {
+      padding: 0 !important;
+    }
+  }
+}
