--- a/src/app/home/components/home-dashboard/home-dashboard.component.html
+++ b/src/app/home/components/home-dashboard/home-dashboard.component.html
@@ -1,1 +1,34 @@
-<p>home-dashboard works!</p>
+<div class="inner-sidenav-content">
+  <div class="p-b-0">
+    <div class="dashboard-info-div" fxLayout.xs="column" fxLayoutAlign.lt-lg="space-evenly"
+    fxLayoutAlign="start" fxLayoutWrap>
+      <div class="info-box bg-pink hover-expand-effect">
+        <div class="icon">
+          <i class="material-icons">playlist_add_check</i>
+        </div>
+        <div class="content">
+          <div class="text">NEW TASKS</div>
+          <div class="number count-to" data-from="0" data-to="125" data-speed="15" data-fresh-interval="20">125</div>
+        </div>
+      </div>
+      <div class="info-box bg-pink hover-expand-effect">
+        <div class="icon">
+          <i class="material-icons">playlist_add_check</i>
+        </div>
+        <div class="content">
+          <div class="text">NEW TASKS</div>
+          <div class="number count-to" data-from="0" data-to="125" data-speed="15" data-fresh-interval="20">125</div>
+        </div>
+      </div>
+      <div class="info-box bg-pink hover-expand-effect">
+        <div class="icon">
+          <i class="material-icons">playlist_add_check</i>
+        </div>
+        <div class="content">
+          <div class="text">NEW TASKS</div>
+          <div class="number count-to" data-from="0" data-to="125" data-speed="15" data-fresh-interval="20">125</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
