--- a/src/app/admin/components/admin-user-list/admin-user-list.component.html
+++ b/src/app/admin/components/admin-user-list/admin-user-list.component.html
@@ -39,8 +39,8 @@
         </mat-card-content>
       </mat-card>
       <div class="fab-container">
-        <button matTooltip="Add new config" matTooltipPosition="left" mat-fab class="fab-toggler"
-          >
+        <button matTooltip="Add new user" matTooltipPosition="left" mat-fab class="fab-toggler"
+        (click)="manageUserDialog()">
           <em class="material-icons">add</em>
         </button>
       </div>
